# Housens

./: .gitignore  COMPONENTS.md  Housens-L.kicad_pcb  Housens-L.kicad_prl  Housens-L.kicad_pro  Housens-L.kicad_sch  README.md  fp-info-cache  fp-lib-table  sym-lib-table
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
production/: Housens-L-B_Cu.gbr  Housens-L-B_Mask.gbr  Housens-L-B_Paste.gbr  Housens-L-B_Silkscreen.gbr  Housens-L-Edge_Cuts.gbr  Housens-L-F_Cu.gbr  Housens-L-F_Mask.gbr  Housens-L-F_Paste.gbr  Housens-L-F_Silkscreen.gbr  Housens-L-In1_Cu.gbr  Housens-L-In2_Cu.gbr  Housens-L-NPTH-drl_map.gbr  Housens-L-NPTH.drl  Housens-L-PTH-drl_map.gbr  Housens-L-PTH.drl  Housens-L-job.gbrjob  bom.csv  designators.csv  netlist.ipc  positions.csv
