[package]
name = "housens-firmware"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "udp", "proto-ipv6", "medium-ieee802154", ] }
embassy-stm32 = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [ "defmt", "stm32wb55cg", "time-driver-any", "memory-x", "exti"]  }
embassy-stm32-wpan = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "stm32wb55cg", "mac", "ble"] }
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = "1.0.0"
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2
